# chinese_processing

./: CMakeLists.txt  PinyinConv.cpp  PinyinConv.h  README  README.md  clean.sh
ictclas/: main.cpp
ictclas/doc/: ictclas.mdl  nlp_thesis.rar
ictclas/src/: Dictionary.cpp  Dictionary.h  Result.cpp  Result.h  SegGraph.cpp  Segment.cpp  Segment.h  Utility.cpp  Utility.h
ictclas/test/: sample2.txt
ictclas/version/: ictclas-linux-1.0.tar.tar
pinyin/: CMakeLists.txt  PinyinConv.cpp  PinyinConv.h  README
scws/: CMakeLists.txt  ChangeLog  README  config_win32.h  crc32.h  lock.c  lock.h  scws.c  scws.h  scws_version.h  xdb.c  xdict.c  xdict.h  xtree.c
scws/cli/: gen_dict.c  scws_cmd.c
scws/etc/: CMakeLists.txt  rules.ini  rules.utf8.ini  rules_cht.utf8.ini
scws/test/: testscws.c
